testprogs/test/ast.txt
Error: Parse error
   ╭─[testprogs/test/script.pxl:8:10]
   │
 8 │     for k, v in pairs({1, 2, 3}) do
   │          ┬  
   │          ╰── found end of input expected something else
───╯
